added letter guessing game to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,8 +56,9 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="./assets/images/Pancakes.jpg" width=500px; height=auto; alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Pancakes</h5>
-                        <p class="card-text">These were incredibly delicious.</p>
+                        <h5 class="card-title">Letter Guessing Game</h5>
+                        <p class="card-text">First project using Javascript</p>
+                        <a href="https://helloimdavidhaha.github.io/Psychic-Game/" target="_blank" class="btn btn-primary">Check it out!</a>
                     </div>
                 </div>
             </div>
